--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
 	<!-- Заголовок -->
 	<title></title>
+	<!-- Bootstrap -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	
 	<!-- CSS -->
 	<link rel="stylesheet" href="style/style.css" />
 	<!-- Кодировка страницы -->
@@ -14,6 +17,8 @@
 	<!-- JQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
+
 </head>
 <!-- Отображаемое тело страницы -->
 <body>
@@ -185,7 +190,7 @@
 		<div class="catalog__inner">
 			<div class="catalog__item">
 				<a class="catalog__link" href="catalog.html">
-					<img class="catalog__img" src="img/catalog/woman.png" alt="">
+					<img class="catalog__img" src="img/catalog/women.png" alt="">
 					<div class="catalog__text">
 						<h3 class="catalog__suptitle">30% OFF</h3>
 						<h4 class="catalog__subtitle">FOR WOMEN</h4>
@@ -195,7 +200,7 @@
 			
 			<div class="catalog__item">
 				<a class="catalog__link" href="catalog.html">
-					<img class="catalog__img" src="img/catalog/men.png" alt="">
+					<img class="catalog__img" src="img/catalog/man.png" alt="">
 					<div class="catalog__text">
 						<h3 class="catalog__suptitle">HOT DEAL</h3>
 						<h4 class="catalog__subtitle">FOR MEN</h4>
@@ -205,7 +210,7 @@
 
 			<div class="catalog__item">
 				<a class="catalog__link" href="catalog.html">
-					<img class="catalog__img" src="img/catalog/keeds.png" alt="">
+					<img class="catalog__img" src="img/catalog/kids.png" alt="">
 					<div class="catalog__text">
 						<h3 class="catalog__suptitle">NEW ARRIVALS </h3>
 						<h4 class="catalog__subtitle">FOR kids</h4>
@@ -216,7 +221,7 @@
 
 			<div class="last__catalog__item">
 				<a class="catalog__link" href="catalog.html">
-					<img class="last__catalog__img" src="img/catalog/acess.png" alt="">
+					<img class="last__catalog__img" src="img/catalog/acces.png" alt="">
 					<div class="catalog__text acces__text">
 						<h3 class="catalog__suptitle">LUXIROUS & TRENDY</h3>
 						<h4 class="catalog__subtitle">ACCESORIES</h4>
